# PromptPilot

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  quickstart.py
.claude/hooks/: compress_tool_output.py  optimize_prompt.py
.codex/: hooks.json
.codex/hooks/: compress_tool_output.py  optimize_prompt.py
.github/workflows/: publish.yml  test.yml
docs/: ARCHITECTURE.md  AUTHENTICATION_AND_PROVIDERS.md  BENCHMARKS.md  COMPARISON.md  FAQ.md  HYBRID_MODE.md  PROJECT_OVERVIEW.md  README.md  RECORDING.md  ROADMAP.md  ROUTES_AND_DECISIONS.md  SAFETY_MODEL.md  SEMANTIC_PRESERVATION.md  SESSION_MEMORY.md  SLM_HARNESS.md  TELEMETRY_AND_REPLAY.md  TOOL_OUTPUT_COMPRESSION.md  TROUBLESHOOTING.md  WIKI_WORKFLOW.md
docs/assets/: demo_capture.json
examples/: README.md  demo.py
examples/passthrough/: README.md
examples/semantic-preservation/: README.md
examples/tool-output-compression/: README.md
promptpilot/: __init__.py  _subprocess.py  cli.py  handoff.py  stats.py  ui.py
promptpilot/adapters/: __init__.py  anthropic_adapter.py  factory.py  openai_adapter.py  shell.py
promptpilot/compress/: __init__.py  tool_output.py
promptpilot/core/: __init__.py  constants.py  dotenv.py  spec.py  utils.py
promptpilot/hooks/: optimize_prompt.py
promptpilot/judges/: __init__.py  judge.py
promptpilot/normalizers/: __init__.py  base.py  heuristic.py  slm_anthropic.py  slm_openai.py  slm_openai_v2.py  slm_subscription.py
promptpilot/repo/: __init__.py  collector.py  loader.py
prpt/: __init__.py  __main__.py  _subprocess.py  cli.py  handoff.py  session.py  setup.py  stats.py  ui.py  verify.py
prpt/adapters/: __init__.py  anthropic_adapter.py  echo.py  factory.py  openai_adapter.py  shell.py
prpt/compress/: __init__.py  tool_output.py
prpt/core/: __init__.py  constants.py  dotenv.py  spec.py  types.py  utils.py
prpt/hooks/: optimize_prompt.py
prpt/judges/: __init__.py  judge.py  slm.py
prpt/normalizers/: __init__.py  base.py  heuristic.py  slm_anthropic.py  slm_anthropic_v2.py  slm_openai.py  slm_openai_v2.py  slm_subscription.py  slm_subscription_v2.py
prpt/repo/: __init__.py  collector.py  loader.py
research/: _test_endstate_capture.py  _test_gate_arm.py  _test_quota_detector.py  _test_score_endstate.py  _test_slm_native_wiring.py  _test_timeout_instrumentation.py  _test_usage_parser.py  agentic_variety_test.py  analyze_chain4_gating.py  analyze_chain5_decay.py  analyze_uncached_cost.py  chain1_recompute_skipping_run1.py  chain_test.py  chain_test_v2.py  codex_interleave_isolation.py  detach_run.py  diagnose_t1.py  extra_builtin_runs.py  extra_gated_runs.py  extra_no_session_runs.py  extra_raw_runs.py  extra_stacked_runs.py  extra_with_session_runs.py  llmwrap_mvp.py  multirun_test.py  recover_uncached.py  run_claude_isolation.cmd  run_codex_isolation.cmd  score_endstate.py  session_isolation_experiment.py  status_watcher.py  supervise_isolation.py  verify_gate_experiment.py
scripts/: demo_cast.sh  make_demo_svg.py  publish_wiki.sh
tests/: test_adapters.py  test_cli.py  test_compress.py  test_cwd_isolation.py  test_heuristic.py  test_loader.py  test_research_selftests.py  test_slm.py  test_smoke_chain.py  test_stats.py  test_subprocess_reap.py  test_verify.py
